--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -749,8 +749,8 @@ msgstr "Rechnungskorrektur"
 #: pretix/base/invoice.py:382
 #, python-brace-format
 msgctxt "invoice"
-msgid "Your reference: {reference}"
-msgstr "Ihre Referenz: {reference}"
+msgid "Customer reference: {reference}"
+msgstr "Kundenseitige Referenz: {reference}"
 
 #: pretix/base/invoice.py:403 pretix/base/invoice.py:411
 msgctxt "invoice"
